Fix sticky first-column header alignment in developers table

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -648,6 +648,7 @@ th {
 }
 
 th[data-sticky-col] {
+  left: 0;
   z-index: 40;
 }
 
